# ARGE

./: CMakeLists.txt  README.md
ARGE/: ARGE.cpp  ARGE.h  CMakeLists.txt
include/ARGE/: ARGE.hpp  pch.hpp
include/ARGE/graphics/: OpenGL.hpp
include/ARGE/window/: WindowWindows.hpp
libs/: CMakeLists.txt
libs/glad/: glad.c  glad.h
source/ARGE/: ARGE.cpp
source/ARGE/window/: WindowWindows.cpp
